@@ -1341,8 +1341,11 @@ void drumkv1_impl::process_midi ( uint8_t *data, uint32_t size )
 				pv->dcf14.reset(drumkv1_filter2::Type(type1));
 				pv->dcf15.reset(drumkv1_filter3::Type(type1));
 				pv->dcf16.reset(drumkv1_filter3::Type(type1));
-				pv->dcf17.reset_filters();
-				pv->dcf18.reset_filters();
+				// formant filters
+				const float cutoff1 = *elem->dcf1.cutoff;
+				const float reso1 = *elem->dcf1.reso;
+				pv->dcf17.reset_filters(cutoff1, reso1);
+				pv->dcf18.reset_filters(cutoff1, reso1);
 				// envelopes
 				elem->dcf1.env.start(&pv->dcf1_env);
 				elem->lfo1.env.start(&pv->lfo1_env);
